--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
 		"module": "commonjs",
 		"moduleResolution": "node",
 		"experimentalDecorators": true,
+		"declaration": true,
 		"sourceMap": true
 	}
 }
