--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"start": "http-server",
 		"prepare": "run-s clean wrap minify compile bundle",
 		"clean": "rimraf dist && mkdir dist",
-		"wrap": "concat-cli -f source/wrapping.js.start.txt libwebpjs/dist/webp.js source/wrapping.js.end.txt -o dist/dwebp.big.js",
+		"wrap": "concat-cli -f source/wrapping.js.start.txt libwebp/dist/webp.js source/wrapping.js.end.txt -o dist/dwebp.big.js",
 		"minify": "uglifyjs -cm < dist/dwebp.big.js > dist/dwebp.js",
 		"compile": "tsc",
 		"bundle": "browserify dist/webp-hero.bundle.js -o dist/webp-hero.bundle.js",
