--- a/package.json
+++ b/package.json
@@ -9,10 +9,9 @@
 	],
 	"scripts": {
 		"start": "http-server",
-		"prepare": "run-s clean wrap minify compile bundle",
+		"prepare": "run-s clean barrel compile bundle",
 		"clean": "rimraf dist && mkdir dist",
-		"wrap": "concat-cli -f source/wrapping.js.start.txt libwebp/dist/webp.js source/wrapping.js.end.txt -o dist/dwebp.big.js",
-		"minify": "uglifyjs -cm < dist/dwebp.big.js > dist/dwebp.js",
+		"barrel": "barrelsby --delete --directory source --exclude 'bundle.ts$'",
 		"compile": "tsc",
 		"bundle": "browserify dist/webp-hero.bundle.js -o dist/webp-hero.bundle.js",
 		"test": "exit 0"
@@ -30,11 +29,13 @@
 	"homepage": "https://github.com/chase-moskal/webp-hero#readme",
 	"dependencies": {},
 	"devDependencies": {
+		"barrelsby": "1.0.2",
 		"browserify": "16.2.3",
 		"concat-cli": "4.0.0",
 		"http-server": "0.11.1",
 		"ncp": "2.0.0",
 		"npm-run-all": "4.1.5",
+		"replace-in-file": "3.4.3",
 		"rimraf": "2.6.3",
 		"tsify": "4.0.1",
 		"typescript": "3.3.3",
