remove excess packages, use mkdirp

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "webp-hero",
-	"version": "0.0.0-dev.14",
+	"version": "0.0.0-dev.15",
 	"description": "webp for web browsers",
 	"main": "dist",
 	"types": "dist/index.d.ts",
@@ -11,8 +11,9 @@
 	],
 	"scripts": {
 		"start": "http-server",
-		"prepare": "run-s clean barrel compile bundle",
-		"clean": "rimraf dist && mkdir dist",
+		"prepare": "run-s build test",
+		"build": "run-s clean barrel compile bundle",
+		"clean": "rimraf dist && mkdirp dist",
 		"barrel": "barrelsby --delete --directory source --exclude 'bundle.ts$'",
 		"compile": "tsc",
 		"bundle": "browserify dist/webp-hero.bundle.js -o dist/webp-hero.bundle.js",
@@ -38,14 +39,10 @@
 	"devDependencies": {
 		"barrelsby": "1.0.2",
 		"browserify": "16.2.3",
-		"concat-cli": "4.0.0",
 		"http-server": "0.11.1",
-		"ncp": "2.0.0",
+		"mkdirp": "0.5.1",
 		"npm-run-all": "4.1.5",
-		"replace-in-file": "3.4.3",
 		"rimraf": "2.6.3",
-		"tsify": "4.0.1",
-		"typescript": "3.3.3",
-		"uglify-js": "3.4.9"
+		"typescript": "3.3.3"
 	}
 }
