--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,9 +3,9 @@
 		"baseUrl": ".",
 		"rootDir": "source",
 		"outDir": "dist",
-		"target": "es5",
+		"target": "esnext",
 		"lib": ["es6", "dom"],
-		"module": "commonjs",
+		"module": "esnext",
 		"moduleResolution": "node",
 		"experimentalDecorators": true,
 		"declaration": true,
