upgrade libwebp, emscripten, typescript
this commit upgrades webp-hero's dependencies,
and attempts to fix bug #17

 [libwebp/Dockerfile]
  - upgrade emscripten to sdk-1.38.30-64bit (2019-05-21)
  - upgrade libwebp to 1326988 (2019-04-18)

 [libwebp/source/CMakeLists.txt]
  - add `-s ENVIRONMENT=\"'web'\"` to fix #17
  - add `-s WASM=0 -s LEGACY_VM_SUPPORT=1` to fix non-wasm usage
    (emscripten release notes mentions this change is necessary)

 [package.json]
  - upgrade typescript
  - add "module" field
  - bump to webp-hero@0.0.0-dev.21

 [README.md]
  - update freshness section
  - update unpkg link anticipating -dev.21

 [CHANGELOG.md]
  - mention upgrades

--- a/libwebp/source/CMakeLists.txt
+++ b/libwebp/source/CMakeLists.txt
@@ -545,12 +545,12 @@ if(WEBP_BUILD_WEBP_JS)
   set_target_properties(
     webp_js
     PROPERTIES LINK_FLAGS
-               "-s EXPORTED_FUNCTIONS='[\"_WebpToSDL\"]' -s INVOKE_RUN=0 -s TOTAL_MEMORY=67108864 -s ALLOW_MEMORY_GROWTH=1 --memory-init-file 0 \
+               "-s ENVIRONMENT=\"'web'\" -s WASM=0 -s LEGACY_VM_SUPPORT=1 -s EXPORTED_FUNCTIONS='[\"_WebpToSDL\"]' -s INVOKE_RUN=0 -s TOTAL_MEMORY=67108864 -s ALLOW_MEMORY_GROWTH=1 --memory-init-file 0 \
        -s EXTRA_EXPORTED_RUNTIME_METHODS='[\"cwrap\"]'")
   set_target_properties(webp_js PROPERTIES OUTPUT_NAME webp)
   target_compile_definitions(webp_js PUBLIC EMSCRIPTEN WEBP_HAVE_SDL)
 
-  # WASM version
+  # # WASM version
   # add_executable(webp_wasm ${CMAKE_CURRENT_SOURCE_DIR}/extras/webp_to_sdl.c)
   # target_link_libraries(webp_wasm webpdecoder SDL)
   # target_include_directories(webp_wasm PRIVATE ${CMAKE_CURRENT_BINARY_DIR})
@@ -560,7 +560,7 @@ if(WEBP_BUILD_WEBP_JS)
   #      -s EXPORTED_FUNCTIONS='[\"_WebpToSDL\"]' -s INVOKE_RUN=0 \
   #      -s EXTRA_EXPORTED_RUNTIME_METHODS='[\"cwrap\"]'")
   # target_compile_definitions(webp_wasm PUBLIC EMSCRIPTEN WEBP_HAVE_SDL)
-# 
+
   # target_compile_definitions(webpdspdecode PUBLIC EMSCRIPTEN)
 endif()
 
