settings: two-space dockerfiles

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,5 +18,10 @@
 		"libwebp/dist": true
 	},
 
-	"typescript.tsdk": "node_modules/typescript/lib/"
+	"typescript.tsdk": "node_modules/typescript/lib/",
+
+	"[dockerfile]": {
+		"editor.insertSpaces": true,
+		"editor.tabSize": 2
+	}
 }
