--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
 		"libwebp/dist"
 	],
 	"scripts": {
-		"start": "serve",
 		"prepare": "run-s build test",
 		"build": "run-s clean barrel compile && run-p bundle polyfills",
 		"clean": "rimraf dist dist-cjs && mkdirp dist dist-cjs",
@@ -21,7 +20,8 @@
 		"compile-cjs": "tsc --outDir dist-cjs --target es5 --module commonjs && replace 'libwebp\\/dist\\/webp\\.js' 'libwebp/dist/webp.cjs.js' dist-cjs/webp-machine.js",
 		"bundle": "browserify dist-cjs/webp-hero.bundle.js -p tinyify -o dist-cjs/webp-hero.bundle.js",
 		"polyfills": "concat-cli -f node_modules/es6-promise/dist/es6-promise.auto.min.js -f node_modules/mdn-polyfills/Array.from.js -o dist-cjs/polyfills.js",
-		"test": "exit 0"
+		"test": "exit 0",
+		"start": "http-server -p 5000"
 	},
 	"repository": {
 		"type": "git",
@@ -39,20 +39,20 @@
 		"url": "https://github.com/chase-moskal/webp-hero/issues"
 	},
 	"homepage": "https://github.com/chase-moskal/webp-hero#readme",
-	"dependencies": {},
 	"devDependencies": {
 		"array-from": "^2.1.1",
-		"barrelsby": "^2.2.0",
-		"browserify": "^16.5.2",
+		"barrelsby": "^2.3.2",
+		"browserify": "^17.0.0",
 		"concat-cli": "^4.0.0",
 		"es6-promise": "^4.2.8",
+		"http-server": "^14.1.0",
 		"mdn-polyfills": "^5.20.0",
 		"mkdirp": "^1.0.4",
 		"npm-run-all": "^4.1.5",
-		"replace": "^1.2.0",
+		"replace": "^1.2.1",
 		"rimraf": "^3.0.2",
-		"serve": "^11.3.2",
+		"serve": "^13.0.2",
 		"tinyify": "^3.0.0",
-		"typescript": "^4.0.2"
+		"typescript": "^4.5.5"
 	}
 }
