--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "webp-hero",
-	"version": "0.0.0-dev.28",
+	"version": "0.0.0",
 	"description": "webp image format polyfill for browsers",
 	"main": "dist-cjs/index.js",
 	"module": "dist/index.js",
