--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,8 +18,6 @@
 		"libwebp/dist": true
 	},
 
-	"typescript.tsdk": "node_modules/typescript/lib/",
-
 	"[dockerfile]": {
 		"editor.insertSpaces": true,
 		"editor.tabSize": 2
@@ -28,5 +26,15 @@
 	"[plaintext]": {
 		"editor.insertSpaces": true,
 		"editor.tabSize": 2
-	}
+	},
+
+	"typescript.tsdk": "node_modules/typescript/lib",
+	"javascript.format.semicolons": "remove",
+	"typescript.format.semicolons": "remove",
+	"javascript.format.insertSpaceAfterOpeningAndBeforeClosingNonemptyBraces": false,
+	"javascript.format.insertSpaceAfterOpeningAndBeforeClosingEmptyBraces": false,
+	"typescript.format.insertSpaceAfterOpeningAndBeforeClosingNonemptyBraces": false,
+	"typescript.format.insertSpaceAfterOpeningAndBeforeClosingEmptyBraces": false,
+	"javascript.preferences.importModuleSpecifierEnding": "js",
+	"typescript.preferences.importModuleSpecifierEnding": "js",
 }
