--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,6 +28,16 @@
 		"editor.tabSize": 2
 	},
 
+	"[markdown]": {
+		"editor.tabSize": 2,
+		"editor.insertSpaces": true,
+	},
+
+	"[yaml]": {
+		"editor.tabSize": 2,
+		"editor.insertSpaces": true,
+	},
+
 	"typescript.tsdk": "node_modules/typescript/lib",
 	"javascript.format.semicolons": "remove",
 	"typescript.format.semicolons": "remove",
